Fix scrollbar bug

--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -19,7 +19,7 @@
   .header {
     padding: 0 3%;
     position: absolute;
-    width: 100vw;
+    width: 100%;
     height: 80px;
     display: flex;
     justify-content: space-between;
